# llama-stack-provider-kfp-trainer

./: .dockerignore  .gitignore  Containerfile  README.md  pyproject.toml  run.yaml  shell.nix  tox.ini  train.py
.github/workflows/: e2e.yml  lint.yml  mypy.yml  test.yml
docs/: notes.md
providers.d/inline/post_training/: kfp-torchtune.yaml
providers.d/remote/post_training/: kfp-torchtune.yaml
scripts/: build-container.sh  prepare-venv.sh  push-container.sh  run-local-server.sh  run-remote-server.sh  run-server.sh  run-training.sh  upload-model.py
src/llama_stack_provider_kfp_trainer/: __init__.py  config.py  kfp_adapter.py  pipeline.py  provider.py  s3.py  scheduler.py
tests/unit/: test_s3.py
