[project]
dependencies = [
    # We need main until https://github.com/meta-llama/llama-stack/pull/1672 is released
    # TODO: why are some dependencies like fastapi in [dev]?
    "llama-stack[dev] @ git+https://github.com/meta-llama/llama-stack.git@main",
]

name = "llama-stack-provider-kfp-trainer"
version = "0.1.0"
description = "Llama Stack Post Training Provider using KubeFlow Pipelines"
readme = "README.md"
requires-python = ">=3.10" # same as llama-stack

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
