[project]
dependencies = [
    # TODO: why are some dependencies like fastapi in [dev]?
    "llama-stack[dev]>=0.2.5",
    "kfp",
    "torchtune",
]

name = "llama-stack-provider-kfp-trainer"
version = "0.1.0"
description = "Llama Stack Post Training Provider using KubeFlow Pipelines"
readme = "README.md"
requires-python = ">=3.10" # same as llama-stack

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
disable_error_code = ["import-untyped", "var-annotated"]
